# vergilius-rs

./: .gitignore  Cargo.toml  README.md
headers/: bindings-10.0.10240.16384-x64.h  bindings-10.0.10240.16384-x86.h  bindings-10.0.10240.16384.h  bindings-10.0.10586.0-x64.h  bindings-10.0.10586.0-x86.h  bindings-10.0.10586.0.h  bindings-10.0.14393.0-x64.h  bindings-10.0.14393.0-x86.h  bindings-10.0.14393.0.h  bindings-10.0.15063.0-x64.h  bindings-10.0.15063.0-x86.h  bindings-10.0.15063.0.h  bindings-10.0.16299.15-x64.h  bindings-10.0.16299.15-x86.h  bindings-10.0.16299.15.h  bindings-10.0.17134.1-x64.h  bindings-10.0.17134.1-x86.h  bindings-10.0.17134.1.h  bindings-10.0.17763.107-x64.h  bindings-10.0.17763.107-x86.h  bindings-10.0.17763.107.h  bindings-10.0.18362.1-x86.h  bindings-10.0.18362.1.h  bindings-10.0.18362.30-x64.h  bindings-10.0.18362.30.h  bindings-10.0.18362.418-x64.h  bindings-10.0.18362.418-x86.h  bindings-10.0.18362.418.h  bindings-10.0.19041.1288-x64.h  bindings-10.0.19041.1288-x86.h  bindings-10.0.19041.1288.h  bindings-10.0.19041.264-x64.h  bindings-10.0.19041.264-x86.h  bindings-10.0.19041.264.h  bindings-10.0.19041.508-x64.h  bindings-10.0.19041.508-x86.h  bindings-10.0.19041.508.h  bindings-10.0.19041.928-x64.h  bindings-10.0.19041.928-x86.h  bindings-10.0.19041.928.h  (+40 more)
scripts/: generate-bindings.rs  generate-headers.rs
src/: bindings.rs  lib.rs
src/bindings/: windows_10_0_10240_16384_x64.rs  windows_10_0_10240_16384_x86.rs  windows_10_0_10586_0_x64.rs  windows_10_0_10586_0_x86.rs  windows_10_0_14393_0_x64.rs  windows_10_0_14393_0_x86.rs  (+45 more)
(+3 files in other folders)
